# ikutio-backend

./: .lefthook.yml  Cargo.toml  README.md  docker-compose.yaml  rustfmt.toml
backend/authservice/: Cargo.toml
backend/authservice/.sqlx/: query-82edca2af57b94829622c4e09e57b125ba5d338463b83595f99ea0b957602b1e.json  query-98c2aad92036a49e9392612b9ef9576ea0fa0c57f9b4335a9557e11226c4e275.json  query-c31cb1e7448383b6879dc53a287ec22d09400b1c17d0ea14368c4f30c8ca0291.json
backend/authservice/dev/: .env  Dockerfile
backend/authservice/proto/: auth.proto
backend/authservice/src/: main.rs
backend/authservice/src/application/: adapter.rs  mod.rs  use_case.rs
backend/authservice/src/application/commands/: login_command.rs  mod.rs
backend/authservice/src/domain/: auth_repository.rs
backend/authservice/src/domain/models/: auth.rs  error.rs  id.rs  mod.rs
backend/authservice/src/infrastructure/: adapter.rs  auth_repository.rs  jwt_generator.rs  mod.rs
backend/authservice/src/internal/application/: adapter.rs  use_case.rs
backend/authservice/src/internal/domain/: auth_repository.rs  mod.rs
backend/authservice/src/internal/infrastructure/: adapter.rs  auth_repository.rs  error.rs  jwt_generator.rs  (+1 more)
backend/authservice/src/proto/: authservice.rs
backend/bff/: Cargo.toml
backend/bff/dev/: .env  Dockerfile
backend/bff/src/: main.rs
backend/bff/src/routes/: extractor.rs  mod.rs  response.rs  router.rs  state.rs
backend/bff/src/services/: authservice.rs  authserviceclient.rs  mod.rs  profileservice.rs  profileservice.tonic.rs  profileserviceclient.rs
(+201 files in other folders)
