[package]
name = "authservice"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bcrypt = "0.17.1"
chrono = "0.4.41"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
prost = "0.14.1"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["postgres", "migrate", "runtime-tokio-rustls", "uuid", "chrono"] }
tokio = { version = "1.47.1", features= ["rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.18.1", features = ["v7", "serde"] }
