[package]
name = "bff"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.4"
dotenv = "0.15.0"
prost = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.14.2"
tonic-build = "0.14.2"
tonic-prost = "0.14.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
